--- a/src/views/editar-producto.ejs
+++ b/src/views/editar-producto.ejs
@@ -23,36 +23,36 @@
                 <div class="contenedor-registro">
 
 
-                    <form action="/productos/editar-producto/<%=guarderia.id%>/?_method=PUT" method="POST"
+                    <form action="/productos/editar-producto/<%=daycare.id%>/?_method=PUT" method="POST"
                         enctype="multipart/form-data">
 
 
                         <div>
                             <label>Nombre de la Guarderia:</label>
-                            <input type="text" name="nombre" value="<%= guarderia.nombre %>" required>
+                            <input type="text" name="nombre" value="<%= daycare.name %>" required>
                         </div>
 
                         <div>
                             <label>Precio:</label>
-                            <input type="number" name="precio" value="<%= guarderia.precio %>" required>
+                            <input type="number" name="precio" value="<%= daycare.price %>" required>
                         </div>
 
                         <div>
                             <label>Características:</label>
-                            <input type="text" name="caracteristicas" value="<%= guarderia.caracteristicas %>" required>
+                            <input type="text" name="caracteristicas" value="<%= daycare.characteristics %>" required>
                         </div>
 
                         <div>
                             <label>Instalaciones:</label>
-                            <input type="text" name="instalaciones" value="<%= guarderia.instalaciones %>" required>
+                            <input type="text" name="instalaciones" value="<%= daycare.facilities %>" required>
                         </div>
 
                         <div>
                             <label>Categorías</label>
                             <select name="categoria">
-                                <option value="Canina">Categoria 1-Perros</option>
-                                <option value="Felina" selected>Categoria 2-Gatos</option>
-                                <option value="Canina y Felina">Categoria 3-Perros y Gatos</option>
+                                <option value="1">Categoria 1-Perros</option>
+                                <option value="2" selected>Categoria 2-Gatos</option>
+                                <option value="3">Categoria 3-Perros y Gatos</option>
                             </select>
                         </div>
 
