--- a/src/views/detalle-profile.ejs
+++ b/src/views/detalle-profile.ejs
@@ -17,15 +17,19 @@
                 <div class="profile-body">
                 <img src="/img/users/<%= user.image %> " alt="profile pic" class="profileimg">
                 <div class="profile-text">
-                <div class="infouser"><div class="datos">Usuario:</div> <%= user.first_name %><%= user.last_name %></div>
+                <div class="infouser"><div class="datos">Usuario:</div> <%= user.firstName %><%= user.lastName %></div>
                 <div class="infouser"><div class="datos">Fecha de Nacimiento:</div><%= user.date %></div>
                 <div class="infouser"><div class="datos">Direccion:</div><%= user.adress %></div>
                 <div class="infouser"><div class="datos">Correo Electronico:</div><%= user.email %></div>
                 <div class="infouser"><div class="datos">DNI:</div><%= user.dni %></div>
                 </div>
+
+                <div>
+                    <a href="/users/editar-perfil/<%= user.id %>">Editar Perfil</a>
+                </div>
                 </div>
 
-                <div class="logout"> 
+                <div class="logout">
                     <a href="/users/logout">LOGOUT</a>
                 </div>
             </main>
