--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -11,12 +11,16 @@
   --gris-oscuro: rgba(128, 128, 128, 0.247);
 }
 
+main {
+  margin-top: 25%;
+}
+
 header {
   background-color: #c7dae0;
   position: fixed;
   top: 0;
   z-index: 9999;
-  height: 20%;
+  height: 25%;
 }
 
 /* Topheader */
@@ -27,7 +31,7 @@ header {
   align-items: center;
   padding: 10px;
   width: 100vw;
-  height: 80%;
+  height: 75%;
   text-align: center;
 
 }
@@ -88,10 +92,9 @@ header {
 .subheader {
   display: flex;
   justify-content: space-evenly;
-  font-size: 13px;
-  /* padding: 5px 5%; */
+  font-size: 12px;
   width: 100vw;
-  height: 20%;
+  height: 25%;
   text-align: center;
 
 }
@@ -115,10 +118,12 @@ header {
 .searchbar {
   display: block;
   background-color: var(--celeste-claro);
+  
 }
 
 .searchbar form{
   text-align: center;
+  
 }
 
 .input-buscar-guarderia{
@@ -133,20 +138,20 @@ header {
 }
 
 .boton-search{
-  font-size: 12px;
-  background-color: var(--celeste-claro);
+  font-size: 10px;
+  background-color: transparent;
   color: grey;
   border: none;
   border-radius: 10px;
   width: 25px;
-  height: 22px;
+  height: 16px;
   position: absolute;
 }
 
 .boton-search i{
   position: relative;
   right: 25px;
-  bottom: 2px;
+  bottom: 0px;
 }
 
 
@@ -275,23 +280,37 @@ header {
 
 }
 
-.encontra-guarderia{
+.contenedor-encontra-guarderia{
   position: absolute;
   width: 60vw;
   height: 10vh;
   bottom: 20px;
   left: 30px;
   max-width: 300px;
-  font-size: 17px;
+  font-size: 5px;
   color: white;
   padding: 15px;
   background-color: var(--gris-oscuro);
   border-radius: 5px;
+}
 
+.encontra-guarderia{
+  font-size: 15px;
+}
+
+.contenedor-promo-guarderia{
+  display: none;
+  
+}
+
+.promo-guarderia{
+  font-size: 25px;
 }
 
 
 .main-productos{
+  display: block;
+  padding: 0px 20px;
   margin: 30px;
   text-align: center;
   background-color: var(--gris);
@@ -304,7 +323,7 @@ header {
   color: var(--verde-oscuro);
   font-size: 18px;
   opacity: 80%;
-  padding: 40px 10px;
+  padding: 30px 10px 0px 10px;
 }
 
 .img-guarderia1{
@@ -312,6 +331,11 @@ header {
   height: 150px;
   border-radius: 5px;
   opacity: 0.7;
+}
+
+.img-slider{
+  padding: 50px;
+  
 }
 
 
@@ -418,28 +442,132 @@ footer {
 /* MEDIA QUERIES */
 
 
-@media(max-width:320px){
-  .sidebarIconToggle {
+@media(min-width:460px){
+
+  main {
+    margin-top: 15%;
+  }
+
+  .img-slider{
+    padding: 80px;
+    
+  }
+
+}
+
+@media(min-width:620px){
+
+  main {
+    margin-top: 0%;
+  }
+
+  .img-slider{
+    padding: 100px;
+    
+  }
+
+}
  
-  top: 50px;
-  left: 150px;
-  height: 22px;
-  width: 22px;
- 
+
+@media(min-width:768px){
+    
+  .contenedor-encontra-guarderia{
+    position: absolute;
+    width: 60vw;
+    height: 10vh;
+    bottom: 30%;
+    left: 30px;
+    max-width: 300px;
+    font-size: 18px;
+    color: white;
+    padding: 15px;
+    background-color: var(--gris-oscuro);
+    border-radius: 5px;
+  
+  }
+
+  .contenedor-promo-guarderia{
+    display: block;
+    position: absolute;
+    width: 90vw;
+    height: 15vh;
+    bottom: 10%;
+    left: 30px;
+    max-width: 650px;
+    font-size: 10px;
+    color: black;
+    padding: 15px;
+    background-color: transparent;
+    border-radius: 5px;
+  }
+
+  .promo-guarderia{
+    font-size: 20px;
+  }
+
+  .slides h6{
+    display: none;
+  }
+  .img-slider{
+    padding: 150px;
+    
+  }
+  }
+
+  @media(min-width:900px){
+
+    header {
+      background-color: #c7dae0;
+      position: fixed;
+      top: 0;
+      z-index: 9999;
+      height: 20%;
+    }
+    
+  
+    main {
+      margin-top: -5%;
+    }
+
+    .contenedor-encontra-guarderia{
+      position: absolute;
+      width: 60vw;
+      height: 10vh;
+      bottom: 45%;
+      left: 30px;
+      max-width: 300px;
+      font-size: 18px;
+      color: white;
+      padding: 15px;
+      background-color: var(--gris-oscuro);
+      border-radius: 5px;
+    
+    }
+
+    .contenedor-promo-guarderia{
+      display: block;
+      position: absolute;
+      width: 90vw;
+      height: 15vh;
+      bottom: 25%;
+      left: 30px;
+      max-width: 650px;
+      font-size: 18px;
+      color: black;
+      background-color: transparent;
+      padding: 15px;
+    
+      border-radius: 5px;
+    }
+
+    .slides h6{
+      display: block;
+    }
+    
+    .img-slider{
+      padding: 200px;
+      
+    }
   
 
-  }
-}
-@media(min-width:760px){
-}
-
-  /* carrito */
-
-@media(max-width:320px){
-    
-  .icon-cart {
-  order:-1;
-  padding-left: 1%;
-
-}   
   }
