--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,10 +1,10 @@
-<style type="text/css">
+<!-- <style type="text/css">
   a:link,
   a:visited,
   a:active {
     text-decoration: none;
   }
-</style>
+</style> -->
 
 
 <header>
