--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -15,26 +15,85 @@
 <!-- Main -->
 
     <main>
-        
+
         <section class="main-slider">
             <div class="slides">
-                <img src="/img/CATIS_2.jpg" alt="imagen main 1">
+                <!-- <img src="/img/CATIS_2.jpg" alt="imagen main 1">
                 <div class="contenedor-encontra-guarderia"><h3 class="encontra-guarderia">ENCONTRA SU LUGAR</h3></div>
-                <div class="contenedor-promo-guarderia"><h3 class="promo-guarderia"><strong>PROMOCIÓN <br> VERANO.</strong><br></h3> 
+                <div class="contenedor-promo-guarderia"><h3 class="promo-guarderia"><strong>PROMOCIÓN <br> VERANO.</strong><br></h3>
                 <h6>Descubrí las mejores guarderias para tu mascota, <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Animi blanditiis possimus aperiam soluta quos eum dolor, Lorem <br>ipsum dolor sit amet consectetur adipisicing elit. Animi blanditiis <br> possimus aperiam soluta quos eum dolor
-                </h6>
+                </h6> -->
+
+
+                <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="10000">
+                    <img src="/img/CATIS_2.jpg" class="d-block w-100 " alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>ENCONTRA SU LUGAR</h5><br>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos fugiat fugit quis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                      <button class="boton-slider-1">Ver mas ></button>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000">
+                    <img src="/img/CATIS_2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>¡Vení a Visitarnos!</h5><br>
+                      <p>Vení a vivir una experiencia única repleta de puro amor. Conocé nuestro trabajo adentro y pasá un día maravilloso junto a nuestras mascotas.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/img/CATIS_2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>PROMOCIÓN VERANO.</h5><br>
+                      <p>Some representative placeholder content for the third slide. Some representative placeholder content for the third slide. Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+
+
             </div>
-        </section>  
+        </section>
 
         <section class="main-productos">
-            <!-- <h3>NUESTRAS GUARDERIAS</h3>
+            <h3>NUESTRAS GUARDERIAS</h3>
+            <div class="contenedor-guarderia-home">
             <div class="guarderia-1"><img class="img-guarderia1" src="/img/guarderias/guarderia_canina_1.jpg" alt="guarderia1"></div>
             <i class="fas fas-arrow fa-angle-left"></i><h4>Guarderia 1</h4><i class="fas fas-arrow fa-angle-right"></i>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, laboriosam molestias quos eum placeat
-                quibusdam explicabo autem debitis repellendus expedita?</p>
-            <div class="boton-reservar"><a href="/productos/productos">RESERVAR</a></div> -->
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus</p>
+            <div class="boton-reservar"><a href="/productos/productos">RESERVAR</a></div>
+          </div>
 
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+          <div class="contenedor-guarderia-home">
+          <div class="guarderia-1"><img class="img-guarderia1" src="/img/guarderias/guarderia_canina_1.jpg" alt="guarderia1"></div>
+            <i class="fas fas-arrow fa-angle-left"></i><h4>Guarderia 1</h4><i class="fas fas-arrow fa-angle-right"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus</p>
+            <div class="boton-reservar"><a href="/productos/productos">RESERVAR</a></div>
+          </div>
+
+          <div class="contenedor-guarderia-home">
+            <div class="guarderia-1"><img class="img-guarderia1" src="/img/guarderias/guarderia_canina_1.jpg" alt="guarderia1"></div>
+            <i class="fas fas-arrow fa-angle-left"></i><h4>Guarderia 1</h4><i class="fas fas-arrow fa-angle-right"></i>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus</p>
+            <div class="boton-reservar"><a href="/productos/productos">RESERVAR</a></div>
+          </div>
+
+            <!-- <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                 <h3>NUESTRAS GUARDERIAS</h3>
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -73,14 +132,14 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
-              <div class="boton-reservar"><a href="/productos/productos">RESERVAR</a></div>
+              <div class="boton-reservar"><a href="/productos/productos">RESERVAR</a></div> -->
         </section>
-     
+
 
         <section class="sobre-nosotros">
             <h3>SOBRE NOSOTROS</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quo eveniet nobis, dolor repudiandae vel id
-                et repellendus quis commodi delectus voluptatum iste vero nisi maxime eligendi. Possimus, a dolore.</p>
+                et repellendus quis commodi delectus voluptatum iste vero nisi maxime eligendi. Possimus, a dolore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam debitis, commodi magni omnis aspernatur sapiente quae consequatur nostrum voluptate! Laudantium reprehenderit nam cum tempore, et unde omnis dignissimos accusantium sit? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis architecto fugit debitis fugiat aperiam nemo odit eum, sunt nihil culpa adipisci inventore totam dolore repellat itaque distinctio deserunt? Magni, nam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut eveniet neque inventore eius non ad placeat quis quae deleniti est! Est quae eum in, iure blanditiis magnam eligendi non sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsum consequuntur reiciendis cum, explicabo aspernatur tenetur excepturi aut nam, facere totam ratione praesentium dolores deserunt corrupti blanditiis earum aperiam in?</p>
         </section>
 
     </main>
