--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -42,14 +42,14 @@
                     </div>
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
-                    <img src="/img/CATIS_2.jpg" class="d-block w-100" alt="...">
+                    <img src="/img/mascota-viaje5.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>¡Vení a Visitarnos!</h5><br>
                       <p>Vení a vivir una experiencia única repleta de puro amor. Conocé nuestro trabajo adentro y pasá un día maravilloso junto a nuestras mascotas.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="/img/CATIS_2.jpg" class="d-block w-100" alt="...">
+                    <img src="/img/mascota-playa2.jpeg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>PROMOCIÓN VERANO.</h5><br>
                       <p>Some representative placeholder content for the third slide. Some representative placeholder content for the third slide. Some representative placeholder content for the third slide.</p>
