--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -4,7 +4,7 @@
 <!-- head -->
 <%- include('partials/headLinks') %>
 
-
+<link rel="stylesheet" href="/css/style-home.css">
 
 <body>
 <!-- headers -->
@@ -42,7 +42,7 @@
                     </div>
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
-                    <img src="/img/mascota-viaje5.jpg" class="d-block w-100" alt="...">
+                    <img src="/img/viajar-mascota.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                       <h5>¡Vení a Visitarnos!</h5><br>
                       <p>Vení a vivir una experiencia única repleta de puro amor. Conocé nuestro trabajo adentro y pasá un día maravilloso junto a nuestras mascotas.</p>
