--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,5 +1,7 @@
 <!-- Footer -->
 
+<link rel="stylesheet" href="/css/style-footer.css">
+
 <footer>
     <div class="footer-nav">
         <div class="footer-nav1">
