--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,11 +1,6 @@
-<!-- <style type="text/css">
-  a:link,
-  a:visited,
-  a:active {
-    text-decoration: none;
-  }
-</style> -->
+<!-- Header -->
 
+<link rel="stylesheet" href="/css/style-header.css">
 
 <header>
   <section class="topheader">
