--- a/src/views/partials/headLinks.ejs
+++ b/src/views/partials/headLinks.ejs
@@ -1,3 +1,5 @@
+<!-- HeaderLinks -->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +9,6 @@
 
     <!-- Links CSS -->
     <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style-home.css">
 
     <!-- Links Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
