--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -36,9 +36,10 @@
                   <div class="carousel-item active" data-bs-interval="10000">
                     <img src="/img/CATIS_2.jpg" class="d-block w-100 " alt="...">
                     <div class="carousel-caption d-none d-md-block">
+                      <h4 class="alojamascotas">AlojaMascota</h4>
                       <h5>ENCONTRA SU LUGAR</h5><br>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos fugiat fugit quis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
-                      <button class="boton-slider-1">Ver mas ></button>
+                      <button class="boton-slider-1 btn btn-outline-secondary">Ver mas ></button>
                     </div>
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
