--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -15,6 +15,10 @@
 
 /* Main */
 
+.alojamascotas{
+  font-size: 50px;
+}
+
 .main-slider {
   position: relative;
   max-width: 100vw;
@@ -101,7 +105,7 @@
   padding: 3px;
   border-radius: 5px;
   border: black 1px solid;
-  font-size: 15px;
+  font-size: 20px;
 }
 
 
@@ -184,7 +188,7 @@
   .contenedor-guarderia-home{
     width: 30%;
     margin: 10px 10px;
-  
+
   }
 
   .contenedor-encontra-guarderia{
