--- a/public/css/style-producto.css
+++ b/public/css/style-producto.css
@@ -7,7 +7,7 @@
   --gris-oscuro: rgba(128, 128, 128, 0.247);
 }
 /* Buscador - Producto */
-/* 
+/*
 .buscarPorNombre {
   position: fixed;
   width: 90vw;
@@ -27,18 +27,37 @@
 
 /* Flex's */
 
-article {
+/* .articulos {
   display: flex;
-  flex-direction: column;
-  width: 100%;
+  flex-direction: row;
   padding: 20px;
+  margin: auto;
+  justify-content: space-evenly;
+} */
+
+.titulo-productos{
+  font-size: 30px;
+  color: rgb(117, 115, 115);
+  padding: 40px;
+  text-align: center;
 }
 
+.articulos{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: 5px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+
 .imagenGuarderia{
-  width: 70%;
+  width: 80%;
   text-align:center;
   display:block;
-  margin:0px auto;
+  margin: 10px auto;
 }
 
 
@@ -61,20 +80,25 @@ h1 {
   color: #3f7552;
   display: block;
   text-align: center;
+  margin-bottom: 30px;
+}
+
+h3{
+  font-size: 20px;
+
 }
 
 .cuerpo-detalle {
   font-size: 15px;
   text-align: center;
-}
-
-div.cuerpo-detalle {
+  margin: 10px;
+  width: 20em;
   padding: 20px;
   text-align: justify;
   background-color: var(--gris);
   border-radius: 10px;
-  margin-bottom: 10px;
 }
+
 
 .reservar,
 .editar-producto,
@@ -258,3 +282,4 @@ ul.slider li:target {
   font-family: sans-serif;
   font-size: 12px;
 }
+
