--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -45,24 +45,26 @@
                 </ul>
 
                 -->
+                <h1 class="titulo-productos">NUESTRAS GUARDERIAS</h1>
 
                 <section class="articulos">
 
                     <% daycares.forEach(daycare=> { %>
 
-                        <article class="articulo1">
 
-                            <p class="centrado">
-                                <img src="/img/guarderias/<%= daycare.image %> " alt="guarderia1"
-                                    class="imagenGuarderia">
-                            </p>
-                            <div class="nombre-guarderia">Guarderia <%= daycare.name %></div>
-                            <div class="precios">$<%= daycare.price %></div>
-                            <div class="estrellas">
-                                <i class="fas fa-star"></i> <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i><i class="fas fa-star"></i>
-                            </div>
                             <div class="cuerpo-detalle">
+
+                                <div class="centrado">
+                                    <img src="/img/guarderias/<%= daycare.image %> " alt="guarderia1"
+                                        class="imagenGuarderia">
+                                </div>
+                                <div class="nombre-guarderia">Guarderia <%= daycare.name %></div>
+                                <div class="precios">$<%= daycare.price %></div>
+                                <div class="estrellas">
+                                    <i class="fas fa-star"></i> <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i><i class="fas fa-star"></i>
+                                </div>
+
                                 <h3>Características</h3>
                                 <p>
                                     <%= daycare.characteristics %>
@@ -75,20 +77,23 @@
                                 <p>
                                     <%= daycare.category_id %>
                                 </p>
+
+                                <div class="reservar" strong>
+                                    <a href="/productos/detalle-producto/<%= daycare.id  %>">Ver Guarderia</a></strong>
+                                    <i class="fas fa-paw huellita-reserva"></i>
+                                </div>
+
+
                             </div>
 
-                            <div class="reservar" strong>
-                                <a href="/productos/detalle-producto/<%= daycare.id  %>">Ver Guarderia</a></strong>
-                                <i class="fas fa-paw huellita-reserva"></i>
-                            </div>
-                        </article>
+
 
                         <% }) %>
 
 
                 </section>
 
-                <div class="resumen-producto">
+                <!-- <div class="resumen-producto">
                     <div class="categoria-producto">
                         <form action="categoria" method="GET">
                             <label class="titulo-categoria">Cat. :</label><br>
@@ -120,7 +125,7 @@
                             <i class="fas fa-minus"></i>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </main>
 
