--- a/public/css/style-detalle-producto.css
+++ b/public/css/style-detalle-producto.css
@@ -15,32 +15,30 @@
       --gris: rgba(128, 128, 128, 0.151);
     }
 
-    /* Flex's */
+    .detalleproducto {
+          padding-top: 20px;
+    }
 
-article {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      padding: 20px;
+    .imagenprod img {
+          width: 70%
     }
-    
-    .imagenGuarderia{
-      width: 70%;
-      text-align:center;
-      display:block;
-      margin:0px auto;
-    }
-    
-    
-    h1 {
-      font-size: 20px;
+
+    .imagenprod {
+          text-align: center;
     }
     
     .nombre-guarderia {
-      font-size: 20px;
+      font-size: 18px;
       color: #3f4e4a;
       font-weight: bold;
       text-align: center;
+      padding: 10px 0;
+    }
+
+    .subtituloguarderia{
+          display: flex;
+          flex-direction: row-reverse;
+          justify-content: space-around;
     }
     
     .precios {
@@ -52,13 +50,15 @@ article {
       display: block;
       text-align: center;
     }
-    
-    .cuerpo-detalle {
-      font-size: 15px;
-      text-align: center;
+
+    h3 {
+          font-size: 14px;
+          font-weight: bold;
     }
     
-    div.cuerpo-detalle {
+   .cuerpo-detalle {
+      font-size: 12px;
+      text-align: center;
       padding: 20px;
       text-align: justify;
       background-color: var(--gris);
@@ -70,7 +70,7 @@ article {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-gap: 10px;
-            grid-auto-rows: minmax(100px, auto);
+            grid-auto-rows: minmax(70px, auto);
           }
 
     
@@ -101,160 +101,34 @@ article {
     }
     
     
-    ul,
-    li {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-    }
-    
-    ul.slider {
-      position: relative;
-      width: 100%;
-      height: 210px;
-      text-align: center;
-    }
-    
-    ul.slider li {
-      position: absolute;
-      left: 0px;
-      top: 0px;
-      opacity: 0;
-      width: inherit;
-      transition: opacity 0.5s;
-      background: #fff;
-    }
-    
-    ul.slider li img {
-      height: 250px;
-      object-fit: cover;
-      width: 60%;
-      display: inline-block;
-      margin: auto;
-      margin: 5px;
-      padding: 5px;
-      margin-top: 50px;
-    }
-    
-    ul.slider li:first-child {
-      opacity: 1; /*Mostramos el primer <li>*/
-    }
-    
-    ul.slider li:target {
-      opacity: 1; /*Mostramos el <li> del enlace que pulsemos*/
-    }
-    
-    .menu-articulo1,
-    .menu-articulo2 {
-      text-align: center;
-      margin-top: 30px;
-    }
-    
-    .menu-articulo1 li,
-    .menu-articulo2 li {
-      display: inline-block;
-      text-align: center;
-    }
-    
-    .menu-articulo1 a,
-    .menu-articulo2 a {
-      display: inline-block;
-      color: white;
-      text-decoration: none;
-      background-color: #3f7552;
-      padding: 5px;
-      font-size: 15px;
-      border-radius: 100%;
-    }
-    
-    /* Modal Resumen - Buscador */
-    
-    .resumen-producto{
-      display: none;
-      width: 96vw;
-      position: sticky;
-      bottom: 5px;
-      z-index: 99;
-      border-radius: 10px;
-      padding: 10px 0;
-      margin: 0 2vw;
-      /* display: flex; */
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: flex-start;
-      background-color: var(--celeste-claro);
-      margin-bottom: 20px;
-    }
-    
-    
-    .categoria-producto,
-    .categoria-producto label {
-      font-size: 12px;
-    }
-    
-    .titulo-categoria{
-      font-size: 12px;
-      color: var(--verde-oscuro)
-    }
-    
-    .opciones-categoria {
-      font-size: 12px;
-      padding: 1px;
-      color: var(--verde-oscuro)
-    }
-    
-    .fechas-producto {
-      display: flex;
-      flex-direction: column;
-      margin: 0 0;
-    }
-    
-    .fechas-producto input {
-      font-size: 12px;
-      color: var(--verde-oscuro);
-    }
-    
-    .fechas-producto label {
-      padding: 0 0;
-      font-size: 12px;
-      color: var(--verde-oscuro)
-    }
-    
-    .cantidad .mascota {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      align-items: center;
-      margin: 10px 0;
-    }
-    
-    .cantidad .fa-dog,
-    .cantidad .fa-cat {
-      font-size: 18px;
-      text-align: center;
-      color: var(--verde-oscuro);
-      width: 24px;
-      height: 24px;
-      background-color: white;
-      border-radius: 30%;
-      border: solid 1px var(--verde-oscuro);
-      padding-top: 2px;
-      margin-right: 5px;
-    
-    }
-    
-    .cantidad .fa-plus,
-    .cantidad .fa-minus {
-      font-size: 14px;
-      background-color: var(--celeste-claro);
-      border: solid 1px var(--celeste-claro);
-      border-radius: 50%;
-      color: white;
-      margin: 0 2px;
-    }
-    
-    .cantidad div{
-      font-family: sans-serif;
-      font-size: 12px;
+    @media(min-width:768px){
+
+      .detalleproducto {
+            padding: 20px 10px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+      }
+
+      .imagenprod {
+            width:60%;
+      }
+
+      .detalleproducto img{
+            width: 80%;
+      }
+
+      .cuerpo-detalle{
+            width: 40vw;
+      }
+
+      .acciones-detalle-producto {
+            padding-top: 20px;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-gap: 5px;
+            grid-auto-rows: minmax(100px, auto);
+          }
     }
     
