--- a/src/views/detalle-producto.ejs
+++ b/src/views/detalle-producto.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,6 +8,7 @@
     <link rel="stylesheet" href="/css/style-detalle-producto.css">
 
 
+
     <body>
         <!-- headerMain y headerSidebar-->
         <%- include('partials/header') %>
@@ -17,53 +17,62 @@
             <!-- Main -->
 
             <main>
-                <img src="/img/guarderias/<%= daycare.image %> " alt="guarderia1" class="imagen1">
-                <div class="nombre-guarderia">Guarderia <%= daycare.name %>
-                </div>
-                <div class="precios">$<%= daycare.price %>
-                </div>
-                <div class="estrellas">
-                    <i class="fas fa-star"></i> <i class="fas fa-star"></i>
-                    <i class="fas fa-star"></i><i class="fas fa-star"></i>
-                </div>
 
-                <div class="cuerpo-detalle">
+                <section class="detalleproducto">
+                    <div class=imagenprod><img src="/img/guarderias/<%= daycare.image %> " alt="guarderia1"
+                            class="imagen1"></div>
+                    <div>
+                        <div class="nombre-guarderia">Guarderia <%= daycare.name %>
+                        </div>
+                        <div class="subtituloguarderia">
+                            <div class="precios">$<%= daycare.price %>
+                            </div>
+                            <div class="estrellas">
+                                <i class="fas fa-star"></i> <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i>
+                            </div>
+                        </div>
 
-                    <h3>Características</h3>
-                    <p>
-                        <%= daycare.characteristics %>
-                    </p>
-                    <h3>Instalaciones</h3>
-                    <p>
-                        <%= daycare.facilities %>
-                    </p>
+                        <div class="cuerpo-detalle">
 
-                </div>
+                            <h3>Características</h3>
+                            <p>
+                                <%= daycare.characteristics %>
+                            </p>
+                            <h3>Instalaciones</h3>
+                            <p>
+                                <%= daycare.facilities %>
+                            </p>
+
+                        </div>
+                    </div>
+                </section>
+
                 <div class="acciones-detalle-producto">
-                <div class="reservar" strong>
-                    <a href="#">Reservar</a></strong>
-                    <i class="fas fa-paw huellita-reserva"></i>
-                </div>
+                    <div class="reservar" strong>
+                        <a href="#">Reservar</a></strong>
+                        <i class="fas fa-paw huellita-reserva"></i>
+                    </div>
 
-                <div class="editar-producto" strong>
-                    <a href="/productos/editar-producto/<%= daycare.id %>">Editar producto</a></strong>
-                    <i class="fas fa-paw huellita-reserva"></i>
-                </div>
+                    <div class="editar-producto" strong>
+                        <a href="/productos/editar-producto/<%= daycare.id %>">Editar producto</a></strong>
+                        <i class="fas fa-paw huellita-reserva"></i>
+                    </div>
 
-                <div class="crear-producto" strong>
-                    <a href="/productos/crear-producto">Crear Producto</a></strong>
-                    <i class="fas fa-paw huellita-reserva"></i>
-                </div>
+                    <div class="crear-producto" strong>
+                        <a href="/productos/crear-producto">Crear Producto</a></strong>
+                        <i class="fas fa-paw huellita-reserva"></i>
+                    </div>
 
-                <div class="eliminar-producto" strong>
-                <form method="POST" action="/productos/eliminar-producto/<%= daycare.id %>/?_method=DELETE">
+                    <div class="eliminar-producto" strong>
+                        <form method="POST" action="/productos/eliminar-producto/<%= daycare.id %>/?_method=DELETE">
 
-                    <button class="boton-eliminar" type="submit">Eliminar Producto</strong>
-                    </button>
-                    <i class="fas fa-paw huellita-reserva"></i>
-                </form>
+                            <button class="boton-eliminar" type="submit">Eliminar Producto</strong>
+                            </button>
+                            <i class="fas fa-paw huellita-reserva"></i>
+                        </form>
+                    </div>
                 </div>
-            </div>
 
 
                 </section>
@@ -72,7 +81,6 @@
 
             <!-- Footer -->
             <%- include('partials/footer') %>
-
 
     </body>
 
