--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -140,8 +140,11 @@
         <section class="sobre-nosotros">
             <h3>SOBRE NOSOTROS</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quo eveniet nobis, dolor repudiandae vel id
-                et repellendus quis commodi delectus voluptatum iste vero nisi maxime eligendi. Possimus, a dolore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam debitis, commodi magni omnis aspernatur sapiente quae consequatur nostrum voluptate! Laudantium reprehenderit nam cum tempore, et unde omnis dignissimos accusantium sit? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis architecto fugit debitis fugiat aperiam nemo odit eum, sunt nihil culpa adipisci inventore totam dolore repellat itaque distinctio deserunt? Magni, nam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut eveniet neque inventore eius non ad placeat quis quae deleniti est! Est quae eum in, iure blanditiis magnam eligendi non sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsum consequuntur reiciendis cum, explicabo aspernatur tenetur excepturi aut nam, facere totam ratione praesentium dolores deserunt corrupti blanditiis earum aperiam in?</p>
-        </section>
+                et repellendus quis commodi delectus voluptatum iste vero nisi maxime eligendi. Possimus, a dolore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam debitis, commodi magni omnis aspernatur sapiente quae consequatur nostrum voluptate! </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quo eveniet nobis, dolor repudiandae vel id
+                  et repellendus quis commodi delectus voluptatum iste vero nisi maxime eligendi. Possimus, a dolore. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam debitis, commodi magni omnis </p>
+    
+              </section>
 
     </main>
 
