--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -33,7 +33,7 @@
                       <h4 class="alojamascotas">AlojaMascota</h4>
                       <h5>ENCONTRA SU LUGAR</h5><br>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos fugiat fugit quis. Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
-                      <button class="boton-slider-1 btn btn-outline-secondary">Ver mas ></button>
+                      <button class="boton-slider-1 btn btn-outline-secondary"><a class="btn btn-outline-secondary" href="/productos/productos"> Ver mas ></a></button>
                     </div>
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
@@ -79,6 +79,8 @@
           </div>
 
           <% }) %>
+
+          <button class="boton-slider-1 btn btn-ver-todas btn-outline-secondary"><a class="btn btn-outline-secondary" href="/productos/productos"> Ver todas</a><i class="fas fa-paw huellita-reserva"></i></button>
 
         </section>
 
